# C-Properties

./: .clang-format  CMakeLists.txt  Readme.md  build.bat  env.yml
cmake/: CMakeHelper.cmake  SelfDefineMacro.cmake
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  _promise.cpp  _promise.h  decltype.hpp  functor.cpp  functor.h  main.cpp  multithreading.hpp  mytemplate.h  tuple.h  variatic.h  variatic.hpp  vector_insert.hpp  xthread.hpp
src/cherno tutorials/: CMakeLists.txt  _move.cpp  _move.h  cast.hpp  lvalue&&rvalue.cpp  lvalue&&rvalue.h  main.cpp  multi-array.hpp  selfarray.cpp  selfarray.h  sortAlgorithm.h  thread.hpp  timing.hpp  type_punning.hpp  union.hpp  virtualDestructor.hpp
src/openmp/: CMakeLists.txt  main.cpp  task_fib.hpp
